fixed data display

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <!-- HTML for popup(s) used for constraints (used by jBox) -->
     <div style="display: none" id="jBox-slider-grab">
+        <p>Minimum: <span id='slider-min'>-</span>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Maximum: <span id='slider-max'>-</span></p>
 	   <input name="text-basic" id="constraint-A" placeholder="Lower Constraint" value="" type="text">
 	   <input name="text-basic" id="constraint-B" placeholder="Upper Constraint" value="" type="text">
     </div>
