fixed lexical properity descriptions

--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
        <table class='about-filter-table'>
             <tr>
                 <td>Lexical Class</td>
-                <td>Mean subjective frequency rating (as rated by both native and non-native signers)</td>
+                <td>The sign's lexical class</td>
             </tr>
             <tr>
                 <td>Compound</td>
-                <td>Standardized subjective frequency rating (z)  (as rated by both native and non-native signers)</td>
+                <td>"1" indicates that the sign includes more than one free morpheme</td>
             </tr>
             <tr>
                 <td>Initialized</td>
-                <td>Mean subjective frequency rating (as rated by native ASL signers only)</td>
+                <td>"1" indicates that the handshape of the sign is the first letter of the English translation</td>
             </tr>
             <tr>
                 <td>Fingerspelled Loan Sign</td>
-                <td>Standardized subjective frequency rating (z) (as rated by native ASL signers only)</td>
+                <td>"1" indicates that the sign includes more than one letter of the manual alphabet</td>
             </tr>
         </table>
 
