--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                         <p>Search for word:</p>
                         <input id="search-input" autofocus type="text" name="q" style="width:100%;max-width:600px;outline:0">
                     </form>
+                    <p id='no_results'>No Words Found</p>
                 </div>
             </div>
             <div id='filter-container'>
@@ -309,5 +310,17 @@
             <img src='css/images/zoom_reset.png' />
         </div>
     </div>
+
+    <!-- Google Analytics Script -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-54747354-2', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
