changed phrasing for no results

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <p>Search for word:</p>
                         <input id="search-input" autofocus type="text" name="q" style="width:100%;max-width:600px;outline:0">
                     </form>
-                    <p id='no_results'>No Words Found</p>
+                    <p id='no_results'>No Sign Matched Your Query</p>
                 </div>
             </div>
             <div id='filter-container'>
