fixed some styling / linking

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class='multiview_content' id='about'>
-            <p>ASL-LEX is a database of lexical and phonological properties of nearly 1,000 signs in American Sign Language. This project is a collaboration between the Laboratory for Language and Cognitive Neuroscience at San Diego State University and the Psycholinguistics and Linguistics Lab at Tufts University. ASL-LEX is a searchable database of subjective frequency ratings, iconicity ratings, lexical properties (e.g., initialized signs; lexical class), and six phonological features from which neighborhood densities have been calculated. ASL-LEX also provides English translations and, for a subset of signs, alternative translations. Lastly, the database also contains time codes for the sign onset and offset within each video clip.</p>
+            <p>ASL-LEX is a database of lexical and phonological properties of nearly 1,000 signs in American Sign Language. This project is a collaboration between the <a href='http://emmoreylab.sdsu.edu/'>Laboratory for Language and Cognitive Neuroscience</a> at <a href='#'>San Diego State University</a> and the <a href='#'>Psycholinguistics and Linguistics Lab</a> at <a href='#'>Tufts University</a>. ASL-LEX is a searchable database of subjective frequency ratings, iconicity ratings, lexical properties (e.g., initialized signs; lexical class), and six phonological features from which neighborhood densities have been calculated. ASL-LEX also provides English translations and, for a subset of signs, alternative translations. Lastly, the database also contains time codes for the sign onset and offset within each video clip.</p>
 
             <p>The content on this website is available under a CC-By-NC license, meaning you can reuse and remix this content with attribution for non-commercial purposes. If you would like to cite it, please use the following: Caselli, N., Sevcikova, Z., Cohen-Goldberg, A., Emmorey, K.  (in prep). ASL-Lex: A Lexical Database for ASL.</p>
 
@@ -49,7 +49,7 @@
             <!-- Begin MailChimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
             <style type="text/css">
-                #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+                #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
                 /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
                    We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
             </style>
