--- a/visual.html
+++ b/visual.html
@@ -210,7 +210,7 @@
                     </tr>
                     <tr>
                         <td><img src='css/images/edge.png' width='15px'></td>
-                        <td>Signs that share phonological properties are connected by edges</td>
+                        <td>Signs that share movement, major location, flexion, and selected fingers are connected by edges</td>
                     </tr>
                     <tr>
                         <td><img src='css/images/color_wheel.png' width='15px'></td>
