--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class='multiview'>
-        <h1 id='title'>ASL-LEX</h1>
+        <h1 id='title'><a href='visual.html'>ASL-LEX</a></h1>
         <h3 id='tagline'>A lexical database for ASL</h3>
 
         <div class='multiview_menu'>
@@ -89,6 +89,6 @@
         </div>    
     </div>
 
-    <img id='visualization_pic' src='css/images/visual.png' />
+    <a href='visual.html'><img id='visualization_pic' src='css/images/visual.png' /></a>
 </body>
 </html>
