added enter button

--- a/index.html
+++ b/index.html
@@ -90,5 +90,6 @@
     </div>
 
     <a href='visual.html'><img id='visualization_pic' src='css/images/visual.png' /></a>
+    <a href='visual.html'><h2 id='enter'>Enter Visualization</h2></a>
 </body>
 </html>
