added more data information

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class='multiview_content' id='instructions'>
             <h4>Basic keyword search</h4>
 
-            <p>Type the English translation in the search box and press enter. Information about that sign will be available in the “Sign Data” tab, and the sign node in the visual lexicon will move to the center of the screen. If more than one sign or English translation matches what you have typed, you will see a list of words to select from.</p>
+            <p>Type the English translation in the search box and press enter. Information about that sign will be available in the “Sign Data” tab, and the sign node in the visual lexicon will move to the center of the screen. You can also click "About this Data" for more information on the data that is displayed. If more than one sign or English translation matches what you have typed, you will see a list of words to select from.</p>
 
             <h4>Advanced search – using filters</h4>
 
